--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "jsdom": "^16.0.0"
+    "jsdom": "^16.0.0",
+    "lodash": "latest"
   }
 }
