--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "jsdom": "^16.0.0",
-    "lodash": "latest"
+    "jsdom": "^16.2.1",
+    "lodash": "latest",
+    "sqlite3": "^4.1.1"
   }
 }
