--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "jsdom": "^16.2.1",
+    "knex": "^0.20.13",
     "lodash": "latest",
+    "moment": "^2.24.0",
     "sqlite3": "^4.1.1"
   }
 }
